# go-bot

./: .gitignore  ARCHITECTURE.md  README.md  SPEC.md  config.yml  contributing.md  go-bot.service  go.mod  go.sum  main.go  napcat_onebot_11_http_api.yaml  test_main.py
botapi/: client.go  message_api.go  message_entity.go  options.go
configs/: config.example.yml  config.full.example.yml
docs/: ai-upgrade-v2.md  config-schema-v1.md  external-exec-plugin-package-v1.md  onebot-adapter-v1.md  plugin-development-guide-v1.md  webui-backend-contract-v1.md
function/: calendar.go  daliuren.go  forging_message.go  jmcomic_download.go  menu_hint.go  phantom_tank.go  plum_blossom.go  test.go  video_parser.go
function/freqtrade_bot/: freqtrade_bot.go  freqtrade_entity.go  freqtrade_util.go
handler/: event.go  handler.go  parser.go
internal/adapter/: types.go
internal/ai/: cli_runner.go  group_policy.go  mcp.go  mcp_test.go  model.go  observation.go  openai.go  outbound_split.go  outbound_split_test.go  persona.go  persona_test.go  planner.go  proactive.go  profile.go  reflection.go  reflection_govern.go  relation_analysis.go  service.go  service_messages.go  service_store.go  service_test.go  sqlstore.go  sqlstore_messages.go  sqlstore_test.go  store.go  text_clean.go  text_clean_test.go  tools.go  vision.go
internal/config/: atomic_nonwindows.go  atomic_windows.go  (+17 more)
registry/: registry.go
scripts/: build_release.ps1  external_plugin_harness.py  package_external_plugins.ps1
sdk/python/: README.md  pyproject.toml
sdk/python/gobot_plugin/: __init__.py  runtime.py
(+116 files in other folders)
